Draft: dev in tokyo - initial

--- a/src/wip/starting-my-journey-as-a-dev-in-tokyo/page.mdx
+++ b/src/wip/starting-my-journey-as-a-dev-in-tokyo/page.mdx
@@ -3,7 +3,7 @@ import { ArticleLayout } from '@/components/ArticleLayout'
 export const article = {
   author: 'Marvin van Stegen',
   date: '',
-  title: '',
+  title: 'Starting My Journey As A Dev In Tokyo',
   description: '',
 }
 
@@ -13,3 +13,40 @@ export const metadata = {
 }
 
 export default (props) => <ArticleLayout article={article} {...props} />
+
+It's still difficult to believe that I'm living in Tokyo right now. That I've actually moved here. The first time I
+tried, was in 2016 when I planned to do a semester abroad at Waseda University in Tokyo. 9 years later, I'm here.
+
+Moving here hasn't been easy. Or let's say, it has been the result of a lot of other things coming together during the
+last few years. There have been a lot of valuable experiences at my previous jobs at Deloitte and Amazon that allowed me
+to make this possible, to gather the skills necessary to have a fair shot and making this work and finding a role that
+fulfills my requirements.
+
+## What I have been searching for and how I found it
+
+I'm certainly not an easy person to please. I had a good amount of wishes for my new job, and some requirements. 
+First, I didn't want to work in an office 5 days a week. I've spent the last 1.5 years taking a break in South Korea with shorter stints back in
+Germany and the thought of going back and completely giving up that freedom, commuting to an office every day, taking
+away precious time of the day that could be used for so many other things that I love, sounded dreadful. Ultimately, a
+fully remote role was the goal, but that's not particularly easy to come across. Not that I haven't tried, it just
+didn't work out for a variety of reasons. 
+Second, I knew that I would prefer living in Japan or South Korea, and over the 1.5 years I've spent in Korea, Korea started feeling like home. For anyone who doesn't know, it's significantly
+easier to find a dev job in Japan than it is in Korea, especially if you don't speak the local language which I
+couldn't. So the more realistic outcome was Japan, and I loved my prior trips to the country, so I certainly didn't
+mind. 
+Third, the salary had to work out for me. I knew that no matter what, it's highly likely to effectively be a salary cut
+compared to my previous job at AWS in Berlin. That would be the sacrifice I had to make for the opportunity. Still, I
+wanted it to be at least 9 million Yen. Why 9 million? Life in Tokyo isn't very cheap but what made my situation a bit
+different was, that I knew I would fly to South Korea for two weekends per month, or at least try to make that work.
+And those flights would be expensive considering I'd be limited when it comes to the departure times from Tokyo and
+Seoul.
+
+## Job search and the interview process
+
+## Preparation and visa
+
+## Settling in
+
+- apartment
+
+## The work
